# peip_aihub

./: .gitignore  README.md  algorithm_controller_design.md  pyproject.toml  requirements-dev.txt  requirements.txt
algorithms/: ALGORITHM_CLASS_METADATA_GUIDE.md  build_and_install_wheels.ps1
algorithms/APC_Test/: README.md  pyproject.toml
algorithms/APC_Test/scripts/: build_and_import_wheel.ps1  smoke_apc_test.py
algorithms/APC_Test/src/apc_engine/: __init__.py  algorithm.py  controller.py  domain.py  factory.py
algorithms/APC_Test/tests/: test_apc_algorithm.py
algorithms/OEE_Test/: README.md  pyproject.toml
algorithms/OEE_Test/scripts/: build_and_import_wheel.ps1  smoke_oee_test.py
algorithms/OEE_Test/src/oee_engine/: __init__.py  algorithm.py  controller.py  domain.py  factory.py
algorithms/OEE_Test/src/oee_engine/common/: __init__.py  algorithm.py  domain.py  io.py  metadata.py  scoring.py
algorithms/OEE_Test/src/oee_engine/pressure/: __init__.py  controller.py  domain.py  metadata.py
algorithms/OEE_Test/src/oee_engine/temperature/: __init__.py  controller.py  domain.py  metadata.py
algorithms/OEE_Test/tests/: test_oee_algorithm.py
algorithms/algorithms/: README.md  pyproject.toml
algorithms/algorithms/src/algorithms/: __init__.py
algorithms/algorithms/src/algorithms/core/: __init__.py  algorithm.py  metadata.py  serialization.py
app/: __init__.py  application.py
app/algorithms/: __init__.py  exceptions.py  handle.py  importing.py  io.py  loader.py  registry.py  service.py  specs.py
app/api/: router.py
app/api/models/: __init__.py  algorithm_model.py  workflow_model.py
app/api/routes/: algorithm_dynamic_route.py  algorithm_route.py  workflow_route.py
app/common/: response.py
app/core/: __init__.py  settings.py
app/workflows/: __init__.py  runner.py  state.py
app/workflows/graphs/: __init__.py  apc_adjust.py
app/workflows/llm/: __init__.py  ollama.py
app/workflows/nodes/: apc.py  explain.py
configs/: .env.example  algorithms.yaml
docs/: LLM_React_use_althorithm.md  apc_dispatch_redundancy_analysis.md  todo_workflow.md  workflow_call_algorithm_capability.md
tests/: fakes.py  llm_test.py  test_algorithm_api.py  test_algorithm_capability.py  test_algorithm_registry.py  test_apc_workflow.py  test_local_llm.py
