[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "peip-algorithms-core"
version = "0.1.0"
description = "Shared algorithm wrapper, metadata and serialization primitives for algorithms"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["algorithms*"]
